--- a/tools/main/Makefile
+++ b/tools/main/Makefile
@@ -15,7 +15,6 @@ LIBS=-L$(NVBIT_PATH) -lnvbit
 NVCC_PATH=-L $(subst bin/nvcc,lib64,$(shell which nvcc | tr -s /))
 
 SOURCES=$(wildcard *.cu)
-
 OBJECTS=$(SOURCES:.cu=.o)
 ARCH?=75
 
@@ -24,7 +23,7 @@ current_dir := $(notdir $(patsubst %/,%,$(dir $(mkfile_path))))
 
 NVBIT_TOOL=$(current_dir).so
 
-all: $(NVBIT_TOOL)
+all: $(NVBIT_TOOL) compress
 
 $(NVBIT_TOOL): $(OBJECTS) $(NVBIT_PATH)/libnvbit.a
 	$(NVCC) -arch=sm_$(ARCH) -O3 $(OBJECTS) $(LIBS) $(NVCC_PATH) -lcuda -lcudart_static -lz -shared -o $@
@@ -35,5 +34,8 @@ $(NVBIT_TOOL): $(OBJECTS) $(NVBIT_PATH)/libnvbit.a
 inject_funcs.o: inject_funcs.cu
 	$(NVCC) $(INCLUDES) -maxrregcount=24 -Xptxas -astoolspatch --keep-device-functions -arch=sm_$(ARCH) -Xcompiler -Wall -Xcompiler -fPIC -c $< -o $@
 
+compress: compress.cc
+	g++ -o compress compress.cc -lz
+
 clean:
-	rm -f *.so *.o
+	rm -f *.so *.o compress
