more benchmarks, bnpl

--- a/test-apps/vectoradd/Makefile
+++ b/test-apps/vectoradd/Makefile
@@ -1,5 +1,5 @@
 all:
-	nvcc -ccbin=$(CXX) -O3 -arch=sm_75 vectoradd.cu -o vectoradd
+	nvcc -ccbin=$(CXX) -G -O3 -arch=sm_75 vectoradd.cu -o vectoradd
 
 clean:
 	rm -f vectoradd
