bigger channel buffer

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-trace*.raw
-trace*.txt
-trace*.gz
-bin_trace*.raw
-bin_trace*.txt
-bin_trace*.gz
-*.o
-*.so
-./tools/main/insts/*.txt
-zzz.raw
-
 /run
 /run_old
+/run-bnpl
+/tools/bnpl
+/tools/instr_count_bb
+/tools/instr_count_cuda_graph
+/tools/mem_printf
+/tools/mem_trace
+/tools/mov_replace
+/tools/opcode_hist
+/tools/record_reg_vals
 compress
+*.o
+*.so
